2006-08-01  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/JTree/getCellRenderer.java:
	New test.

2006-07-30  Casey Marshall  <csm@gnu.org>

	* gnu/testlet/javax/net/ssl/SSLContext/TestDefaultInit.java,
	* gnu/testlet/javax/net/ssl/SSLContext/TestGetInstance.java,
	* gnu/testlet/javax/net/ssl/SSLEngine/AbstractEngineTest.java,
	* gnu/testlet/javax/net/ssl/SSLEngine/SimplePSKKeyManager.java,
	* gnu/testlet/javax/net/ssl/SSLEngine/SimpleX509KeyManager.java,
	* gnu/testlet/javax/net/ssl/SSLEngine/SimpleX509TrustManager.java,
	* gnu/testlet/javax/net/ssl/SSLEngine/TestGNUHandshake.java,
	* gnu/testlet/javax/net/ssl/SSLEngine/TestHandshake.java,
	* gnu/testlet/javax/net/ssl/SSLEngine/TestNoCiphersuites.java,
	* gnu/testlet/javax/net/ssl/SSLEngine/TestNoProtocols.java:
	New tests.

2006-07-30  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/util/GregorianCalendar/setWeekOfMonth.java:
	New test.

2006-07-30  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/java/security/Engine/getInstance.java (testNameRedundancy):
	New method.
	(test): Call new method.

2006-07-29  Carsten Neumann  <cn-develop@gmx.net>

	* gnu/testlet/java/lang/StrictMath/sinh.java: New test.

2006-07-28  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/java/awt/List/testSelected.java: Added more checks.

2006-07-28  Gary Benson  <gbenson@redhat.com>

	* gnu/testlet/java/security/AccessController/contexts.java
	(copyClass): Copy inner classes too.
	(callListJarsOf, callPrivilegedListJarsOf): New methods.
	(test): Extend to test AccessController.doPrivileged().

2006-07-28  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/AbstractDocument/getDocumentProperties.java:
	Removed debug output.
	* gnu/testlet/javax/swing/text/AbstractDocument/BranchElement/getElementIndex.java:
	New test.
	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure4.java:
	Changed tests to do check(x, y) rather than check(x == y), so